--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "com.unity.collab-proxy": "2.4.3",
+    "com.unity.entities": "1.2.3",
     "com.unity.feature.development": "1.0.2",
     "com.unity.inputsystem": "1.8.1",
     "com.unity.timeline": "1.8.6",
